syntax = "proto3";

package auth.v1;

option java_multiple_files = true;
option java_package = "com.thomaskyaw.saas.auth.v1";
option java_outer_classname = "AuthProto";

// Service definition for Auth operations
service AuthService {
  // Validates a token (can be used by Gateway or other services)
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;
  string role = 3;
  repeated string scopes = 4;
}
